2013-06-12 Mario Pulido <mario.pulido@artica.es>
	
	* pandoradb.data.postgreSQL.sql,
	pandoradb.data.oracle.sql,
        pandoradb_data.sql: Change path in command alert.

2013-06-12 Miguel de Dios <miguel.dedios@artica.es>

	* operation/tree.php: fixed to show flash graph in the tree.
	
	Fixes: #2257

2013-06-11 Miguel de Dios <miguel.dedios@artica.es>

	* operation/events/events_list.php, operation/events/events.php:
	fixed the free text search when there is characters as "(".
	
	MERGED FROM THE TRUNK

2013-06-07 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/module_manager.php: fixed the link of pagination.
	
	Fixes: #2250
	
	MERGED FROM THE TRUNK

2013-06-06  Sergio Martin <sergio.martin@artica.es>

	* extensions/snmp_explorer.ph: fixed wrong snmp branch on
	snmp interfaces explorer. Merged from trunk

2013-06-05 Miguel de Dios <miguel.dedios@artica.es>

	* include/constants.php, include/functions_agents.php,
	operation/agentes/estado_agente.php: fixed the filter of the list
	of agents.
	
	Fixes: #2269
	
	MERGED FROM THE TRUNK

2013-06-05 Miguel de Dios <miguel.dedios@artica.es>

	* include/get_file.php: cleaned source code style.

2013-06-05 Miguel de Dios <miguel.dedios@artica.es>

	* operation/snmpconsole/snmp_view.php: fixed the pagination.
	
	Fixes: #2255
	
	MERGED FROM THE TRUNK

2013-06-05 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/agent_manager.php, godmode/menu.php,
	godmode/alerts/configure_alert_template.php,
	godmode/alerts/configure_alert_action.php,
	godmode/alerts/alert_templates.php,
	godmode/alerts/alert_actions.php, godmode/groups/group_list.php,
	godmode/groups/configure_group.php, include/functions.php,
	include/functions_profile.php: fixed the ACLs.
	
	Fixes: #2256
	
	MERGED FROM THE TRUNK

2013-06-04 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/massive/massive_delete_alerts.php: fixed the delete
	alerts with same module.
	
	Fixes: #2272
	
	* include/functions_agents.php: erased unused function.
