@@ -1,3 +1,10 @@
+2013-06-12 Miguel de Dios <miguel.dedios@artica.es>
+
+	* godmode/agentes/planned_downtime.php: make more easy the creation
+	of planned downtime.
+	
+	Fixes: #2290
+
 2013-06-12 Mario Pulido <mario.pulido@artica.es>
 	
 	* pandoradb.data.postgreSQL.sql,
